Bug 87058 - column label functions do not update after inserting rows below title - needs save and reload including a hard recalc
Summary: column label functions do not update after inserting rows below title - needs...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cell-Name
  Show dependency treegraph
 
Reported: 2014-12-06 23:08 UTC by aaker
Modified: 2025-08-13 18:10 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Readings table 4 cols: timestamp; 3 readings (29.11 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-12-06 23:08 UTC, aaker
Details
bibisect "need save/reload" in till51 repo, tail of terminal output (2.40 KB, text/plain)
2018-08-16 02:28 UTC, Terrence Enger
Details
column label function.ods (9.20 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-02-10 13:23 UTC, Oliver Brinzing
Details
verify (17.00 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-02-07 14:54 UTC, aaker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description aaker 2014-12-06 23:08:38 UTC
Created attachment 110518 [details]
Readings table 4 cols: timestamp; 3 readings

Hi

Creating "dynamic" named range: $Tabelle1.$B3:$B$3 (note missing $-sign on row indicator on range start)
This is expanding as expected to $Tabelle1.$B3:$B$4 when inserting row above row 3
Functions using referencing name do not update during runtime. Update done when saving/reopening file.

Same happening when deleting row from "dynamic" range
Not tested with column
Att.
Comment 1 raal 2014-12-07 11:09:11 UTC
I can confirm with Version: 4.5.0.0.alpha0+
Build ID: a26222f5af55e8ffe9784dd411485d3c5c72e983
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-12-07_01:55:26

Steps to reproduce:
open file 
insert empty for above row 3 
insert value 10 into cell B3
watch cell B1 (no change)
CTRL+SHIFT+F9 -> B1 change value
Comment 2 QA Administrators 2015-12-20 16:15:16 UTC Comment hidden (obsolete)
Comment 3 aaker 2015-12-20 22:05:03 UTC
Mint 17.3
4.2.0-19-generic

Version: 5.0.3.2
Build-ID: 1:5.0.3~rc2-0ubuntu1~trusty2
Gebietsschema: de-CH (de_CH.UTF-8)

still present

can't confirm CTRL+SHIFT+F9 behavior as reported by "raal"
Comment 4 QA Administrators 2017-01-03 19:54:59 UTC Comment hidden (obsolete)
Comment 5 aaker 2017-01-03 22:25:24 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2018-07-24 02:37:44 UTC Comment hidden (obsolete)
Comment 7 aaker 2018-08-01 09:36:21 UTC
Still present:

Version: 6.0.5.2
Build-ID: 1:6.0.5~rc2-0ubuntu0.18.04.1~lo1
CPU-Threads: 8; BS: Linux 4.15; UI-Render: Standard; VCL: gtk3; 
Gebietsschema: de-CH (de_DE.UTF-8); Calc: group
Comment 8 Timur 2018-08-01 15:19:00 UTC
aaker thanks for following your bugs. 
But when testing, it's always better idea to test also with master. Normally you get it from https://dev-builds.libreoffice.org/daily/master/ but in Linux it's very convenient to use Appimage in Linux from https://www.libreoffice.org/download/appimage/ or daily from https://libreoffice.soluzioniopen.com/.

As for this bug (test in Windows, so not Linux-only):
I first opened attachment 110518 [details] with LO 6.2+ with steps from raal. Hard recalc doesn't help.
Even setting to prompt user on fileopen for recalc, it asks, but doesn't solves the issue.
Then I saved and reopened and it works. That's what puzzles me. 

I remember we had few bugs with "hard recalc doesn't help". 
Works with LO 4.1. I'll mark regression but that needs to be confirmed.
Comment 9 Terrence Enger 2018-08-16 02:28:34 UTC
Created attachment 144221 [details]
bibisect "need save/reload" in till51 repo, tail of terminal output

Working on debian-buster in the till51 bibisect repository, I see that
<Ctrl>+<Shift>+<F9> stopped recalculating B1 and save/reload became
necessary somewhere in the 74 or so commits:

          commit    s-h       date
          --------  --------  -------------------
    good  b0072876  46564fd9  2015-06-15 00:07:25
    bad   34b2392f  80ec99db  2015-06-15 21:49:07

The hard recalc became necessary somewhere in the the 42max
repository.  Is this of any interest?

I am setting keyword bibisected.
Comment 10 Oliver Brinzing 2019-02-10 13:23:57 UTC
Created attachment 149067 [details]
column label function.ods

this issue is not an issue about a problem with named ranges.

average function uses column labels instead:

Tools/Options.../LibreOffice Calc/Calculate
[X] Automatically find column and row labels

steps to reproduce with LO 6.1.5.2:
- open attached "column label function.ods"
- enter 400 in cell C7
- sum/average functions will update results
- select row 4, context menu "Insert Row Above"
  (or row 3, context menu "Insert Row Below"
- enter 50 in cell C4
- sum/average functions will *not* update results
- CTRL+SHIFT+F9 (hard recalc)
- sum/average functions will *not* update results
- save and reload
- sum/average functions will update results
  (if Tools/Options.../LibreOffice Calc/Formula
   "Recalculation on File Load" is activated
   otherwise use a hard recalc after reload)

not problem at all with: 
- AOO 4.1.5
- LO Version 3.6.7.2 (Build ID: e183d5b)

will update after hard recalc, no need to save and reload:
- LO 4.4.7.2

needs a save and reload followed by a hard recalc:
- LO 5.4.7.2 (x64)
- LO 6.1.5.2 (x64)
- LO 6.3.0.0.alpha0+ (x64)

btw:
Tools/Options.../LibreOffice Calc/General
[ ] Expand references when new columns/rows are inserted
seems to have no influence
Comment 11 Buovjaga 2020-06-04 17:37:30 UTC
(In reply to Oliver Brinzing from comment #10)
> Created attachment 149067 [details]
> column label function.ods
> 
> this issue is not an issue about a problem with named ranges.
> 
> average function uses column labels instead:
> 
> Tools/Options.../LibreOffice Calc/Calculate
> [X] Automatically find column and row labels
> 
> steps to reproduce with LO 6.1.5.2:
> - open attached "column label function.ods"
> - enter 400 in cell C7
> - sum/average functions will update results
> - select row 4, context menu "Insert Row Above"
>   (or row 3, context menu "Insert Row Below"
> - enter 50 in cell C4
> - sum/average functions will *not* update results

Bibisected with Linux 42max to https://git.libreoffice.org/core/+/ac645e88b91e95bc19ce7a8852fe45b0ec8780e7%5E!/
Extract this code into a local function.
Comment 12 shanedd 2020-12-18 09:06:11 UTC Comment hidden (spam)
Comment 13 massi 2021-02-18 03:07:56 UTC Comment hidden (spam)
Comment 14 massi 2021-02-18 03:09:50 UTC Comment hidden (spam)
Comment 15 Jean-Baptiste Faure 2022-02-06 00:28:41 UTC
Reproducible in master Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 3e9975cf507e24e9c501575c501833164d217acc
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Ubuntu_20.04_x86-64
Calc: threaded

following steps from comment #1
CTRL+SHIFT+F9 does nothing but save ans reload update B1

Surprisingly, deleting the added row, updates B1.

Best regards. JBF
Comment 16 QA Administrators 2024-02-07 03:12:51 UTC Comment hidden (obsolete)
Comment 17 aaker 2024-02-07 14:54:18 UTC
Created attachment 192450 [details]
verify

Maybe misuse? (unexpected use?, not a bug?)

Setting the named range as wizard will do to "$Tabelle1.$B$3:$B$6" (compare OP) and "Tools/Options/General/Expand references when new columns/rows are inserted" to "true" does it. Limits of named range are changing whenever row is added or removed at the limits of the range or somewhere else in the range and the value of the cell referencing the name of the range is updated immediately.

Sorry for the trouble.

Can be closed.
Comment 18 Commit Notification 2025-08-12 16:32:34 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d85334664cae22fa7bbc3852d260c0ca7ad704a2

tdf#87058: handle column label references after inserting rows below title

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2025-08-13 18:10:17 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/447ab2b420d16b98c48809ee968c91136aa385c6

tdf#87058: handle column label references after inserting rows below title

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.