tdf#87058: handle column label references after inserting rows below title

Change-Id: I49d066e6466b3bd1368903a150a596d8dc40226e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189425
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit d85334664cae22fa7bbc3852d260c0ca7ad704a2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189475
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>